[tool.poetry]
name = "VoiceVision"
version = "0.1.0"
description = ""
authors = ["Solrikk <reveni324@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
whisper = "^1.2.3"
speech_recognition = "^3.8.1"
numpy = "^1.21.2"
opencv-python-headless = "^4.5.3.56"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"